# ocm-kind-sandbox

./: .flake8  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.sonar.yml  images.yaml.example  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
ocm_sandbox/: __init__.py  cli.py
ocm_sandbox/commands/: __init__.py  load_images.py  scaffold.py  wrap.py
ocm_sandbox/utils/: __init__.py
scripts/: check-prerequisites.sh
tests/: __init__.py  test_cli.py  test_generate_clusterset_scaffolding.py  test_helm_to_mwrs.py  test_load_images_to_kind.py
